<resources>
    <string name="app_name">Registration</string>
    <string name="log_in">Log In</string>
    <string name="register">register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="by_signing_up_you_agree_to_photo_s_terms_of_service_and_privacy_policy">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_back">btn_back</string>
    <string name="username">Username</string>
    <string name="photo">photo</string>
    <string name="pawel_czerwinski">Pawel Czerwinski</string>
</resources>