<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity2">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/arrow"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/btn_back" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:src="@drawable/ic_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/log_in" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:paddingHorizontal="17dp"
            android:background="@drawable/ed_bg"
            android:inputType="text"
            android:hint="@string/username"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_black_bg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_you_agree_to_photo_s_terms_of_service_and_privacy_policy"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>